new content file for practice

--- a/HTML/content/dharma_studies/chod.html
+++ b/HTML/content/dharma_studies/chod.html
@@ -168,15 +168,71 @@
                     </ol>
                 </div>
             </div>
-        </div>
+</div>
 
-        <div class="warning">
+        <div class="practice-steps">
             <div class="language-section">
                 <div class="english">
-                    <p><strong>Important Note:</strong> Chöd is traditionally practiced under the guidance of a qualified teacher. While these basic principles can be explored safely, deep practice should be undertaken with proper instruction. If you experience overwhelming emotions or psychological distress, please seek support from a qualified mental health professional.</p>
+                    <h2>Working with Acute Distress</h2>
+                    <p>During moments of intense anxiety or depression, you can adapt the Chöd practice to be more accessible:</p>
+                    <ol>
+                        <li><strong>Ground Yourself First</strong>
+                            <ul>
+                                <li>Take three slow breaths, focusing on the sensation of breathing</li>
+                                <li>Feel your body's contact with the chair or floor</li>
+                            </ul>
+                        </li>
+                        <li><strong>Simplified Location</strong>
+                            <ul>
+                                <li>Instead of searching, acknowledge where you most strongly feel the distress</li>
+                                <li>You might feel anxiety in your chest or depression as a heaviness throughout your body</li>
+                            </ul>
+                        </li>
+                        <li><strong>Gentle Acknowledgment</strong>
+                            <ul>
+                                <li>Rather than fully becoming the demon, simply nod to its presence</li>
+                                <li>Ask softly: "What do you need right now?"</li>
+                            </ul>
+                        </li>
+                        <li><strong>Simple Offering</strong>
+                            <ul>
+                                <li>Imagine a warm, comforting light surrounding the distress</li>
+                                <li>Allow this light to be whatever the anxiety or depression needs</li>
+                            </ul>
+                        </li>
+                    </ol>
+                    <p>Remember: During intense moments, even a small step towards acknowledging and feeding your demons is valuable. You don't need to complete the full practice.</p>
                 </div>
                 <div class="nepali">
-                    <p><strong>महत्वपूर्ण नोट:</strong> छोद परम्परागत रूपमा योग्य गुरुको मार्गदर्शनमा अभ्यास गरिन्छ। यी आधारभूत सिद्धान्तहरू सुरक्षित रूपमा अन्वेषण गर्न सकिए पनि, गहिरो अभ्यास उचित निर्देशनका साथ गर्नुपर्छ। यदि तपाईंले अत्यधिक भावनाहरू वा मानसिक तनाव अनुभव गर्नुभयो भने, कृपया योग्य मानसिक स्वास्थ्य पेशेवरको सहयोग लिनुहोस्।</p>
+                    <h2>तीव्र तनावसँग काम गर्ने</h2>
+                    <p>तीव्र चिन्ता वा डिप्रेसनको क्षणमा, तपाईं छोद अभ्यासलाई बढी पहुँचयोग्य बनाउन सक्नुहुन्छ:</p>
+                    <ol>
+                        <li><strong>पहिले आधार बनाउनुहोस्</strong>
+                            <ul>
+                                <li>तीन पटक बिस्तारै श्वास लिनुहोस्, श्वास लिने संवेदनामा ध्यान केन्द्रित गर्नुहोस्</li>
+                                <li>तपाईंको शरीरको कुर्सी वा भुइँसँगको सम्पर्क महसुस गर्नुहोस्</li>
+                            </ul>
+                        </li>
+                        <li><strong>सरलीकृत स्थान</strong>
+                            <ul>
+                                <li>खोज्नुको सट्टा, तपाईंले जहाँ सबैभन्दा बढी तनाव महसुस गर्नुहुन्छ त्यसलाई स्वीकार गर्नुहोस्</li>
+                                <li>तपाईंले छातीमा चिन्ता वा शरीरभरि डिप्रेसनको भारीपन महसुस गर्न सक्नुहुन्छ</li>
+                            </ul>
+                        </li>
+                        <li><strong>नरम स्वीकृति</strong>
+                            <ul>
+                                <li>पूर्ण रूपमा बाधा बन्नुको सट्टा, केवल यसको उपस्थितिलाई स्वीकार गर्नुहोस्</li>
+                                <li>बिस्तारै सोध्नुहोस्: "तपाईंलाई अहिले के चाहिन्छ?"</li>
+                            </ul>
+                        </li>
+                        <li><strong>सरल प्रस्ताव</strong>
+                            <ul>
+                                <li>तनावलाई घेरेर न्यानो, आरामदायक प्रकाश रहेको कल्पना गर्नुहोस्</li>
+                                <li>यो प्रकाशलाई चिन्ता वा डिप्रेसनलाई जे चाहिन्छ त्यो हुन दिनुहोस्</li>
+                            </ul>
+                        </li>
+                    </ol>
+                    <p>याद गर्नुहोस्: तीव्र क्षणहरूमा, तपाईंका बाधाहरूलाई स्वीकार गर्ने र खुवाउने तर्फको सानो कदम पनि मूल्यवान हुन्छ। तपाईंले पूर्ण अभ्यास पूरा गर्न आवश्यक छैन।</p>
                 </div>
             </div>
         </div>
