--- a/HTML/content/dharma_studies/laxmi.html
+++ b/HTML/content/dharma_studies/laxmi.html
@@ -180,4 +180,4 @@
         </div>
     </div>
 </body>
-</html>क धन खोज्ने विषय मात्र होइन, तर धर्म (धार्मिकता) र कर्म (कार्य) का गहन सिद्धान्
+</html>
