--- a/HTML/content/dharma_studies/laxmi.html
+++ b/HTML/content/dharma_studies/laxmi.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <style>
+dlkfjdslfjeo
+fkldskfldskfoe
+flkdlfkeofd
+fkdlfieo
+
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
