--- a/HTML/content/dharma_studies/laxmi.html
+++ b/HTML/content/dharma_studies/laxmi.html
@@ -3,27 +3,8 @@ fkldskfldskfoe
 flkdlfkeofd
 fkdlfieo
 
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        .section {
-            margin-bottom: 40px;
-        }
-        h1 {
-            color: #800080;
-            text-align: center;
-            font-size: 2.5em;
-            margin-bottom: 30px;
-        }
-        h2 {
-            color: #4B0082;
-            margin-top: 30px;
-            font-size: 1.8em;
-        }
+     Laxmi is a god
+      
         .nepali {
             font-family: 'Noto Sans', Arial, sans-serif;
         }
