--- a/HTML/content/dharma_studies/laxmi.html
+++ b/HTML/content/dharma_studies/laxmi.html
@@ -17,18 +17,7 @@ fkdlfieo
     </style>
 </head>
 <body>
-    <div class="section">
-        <h1>Goddess Laxmi: The Divine Embodiment of Prosperity and Abundance</h1>
-        
-        <h2>Introduction</h2>
-        <p>In the vast pantheon of Hindu deities, Goddess Laxmi holds a position of supreme significance as the divine embodiment of wealth, prosperity, fortune, and abundance. She is not merely the goddess of material wealth but represents all forms of prosperity - spiritual, intellectual, and material. Known as the consort of Lord Vishnu, Laxmi plays a crucial role in maintaining the cosmic balance of wealth and prosperity in the universe.</p>
-
-        <h2>Origin and Mythology</h2>
-        <p>According to Hindu mythology, Goddess Laxmi emerged during the famous churning of the cosmic ocean (Samudra Manthan) by the devas (gods) and asuras (demons). She arose from the ocean of milk (Kshira Sagara) seated on a full-blown lotus, radiating beauty and grace. This divine emergence earned her the name 'Padma,' meaning lotus, which became one of her numerous epithets.</p>
-        
-        <p>The cosmic churning narrative symbolizes the eternal struggle between good and evil, with Laxmi representing the ultimate reward of righteous action and spiritual pursuit. Her emergence from the ocean signifies the infinite potential of creation and the abundance that lies within the cosmic consciousness.</p>
-
-        <h2>Iconography and Symbolism</h2>
+    Nepalis amountaines country.i love mountain and himalaya
         <p>The iconographic representation of Goddess Laxmi is rich with symbolism and spiritual significance. She is typically depicted as a beautiful goddess with four arms, seated or standing on a lotus flower. Her golden complexion symbolizes prosperity and the ripeness of harvest. The four arms represent the four goals of human life according to Hindu philosophy:</p>
         <ul>
             <li>Dharma (righteousness)</li>
