--- a/HTML/content/dharma_studies/laxmi.html
+++ b/HTML/content/dharma_studies/laxmi.html
@@ -5,9 +5,12 @@ fkdlfieo
 
      Laxmi is a god
       
-        .nepali {
-            font-family: 'Noto Sans', Arial, sans-serif;
-        }
+himal himalaya
+himal himalaya
+himal himalaya
+himal himalaya
+himal himalaya
+himal himalaya
         img {
             max-width: 100%;
             height: auto;
