--- a/HTML/content/dharma_studies/laxmi.html
+++ b/HTML/content/dharma_studies/laxmi.html
@@ -1,4 +1,42 @@
-dlkfjdslfjeo
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .section {
+            margin-bottom: 40px;
+        }
+        h1 {
+            color: #800080;
+            text-align: center;
+            font-size: 2.5em;
+            margin-bottom: 30px;
+        }
+        h2 {
+            color: #4B0082;
+            margin-top: 30px;
+            font-size: 1.8em;
+        }
+        .nepali {
+            font-family: 'Noto Sans', Arial, sans-serif;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 20px auto;
+        }
+    </style>
+</head>
+<body>
+     dlkfjdslfjeo
 fkldskfldskfoe
 flkdlfkeofd
 fkdlfieo
@@ -11,15 +49,6 @@ himal himalaya
 himal himalaya
 himal himalaya
 himal himalaya
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 20px auto;
-        }
-    </style>
-</head>
-<body>
     Nepalis amountaines country.i love mountain and himalaya
         <p>The iconographic representation of Goddess Laxmi is rich with symbolism and spiritual significance. She is typically depicted as a beautiful goddess with four arms, seated or standing on a lotus flower. Her golden complexion symbolizes prosperity and the ripeness of harvest. The four arms represent the four goals of human life according to Hindu philosophy:</p>
         <ul>
