--- a/HTML/content/dharma_studies/laxmi.html
+++ b/HTML/content/dharma_studies/laxmi.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
+           kathmandu darbar squar
+            Buddhanath
+            Swoyambhunath
+            
         }
         .section {
             margin-bottom: 40px;
