--- a/HTML/content/dharma_studies/laxmi.html
+++ b/HTML/content/dharma_studies/laxmi.html
@@ -1,41 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <title>My First Page</title>
     <style>
         body {
-           kathmandu darbar squar
-            Buddhanath
-            Swoyambhunath
-            
-        }
-        .section {
-            margin-bottom: 40px;
-        }
-        h1 {
-            color: #800080;
-            text-align: center;
-            font-size: 2.5em;
-            margin-bottom: 30px;
-        }
-        h2 {
-            color: #4B0082;
-            margin-top: 30px;
-            font-size: 1.8em;
-        }
-        .nepali {
-            font-family: 'Noto Sans', Arial, sans-serif;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 20px auto;
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f5f5f5;
         }
     </style>
 </head>
 <body>
-     dlkfjdslfjeo
+    <h1>Hello World!</h1>
+    <p>     dlkfjdslfjeo
 fkldskfldskfoe
 flkdlfkeofd
 fkdlfieo
@@ -48,138 +28,6 @@ himal himalaya
 himal himalaya
 himal himalaya
 himal himalaya
-    Nepalis amountaines country.i love mountain and himalaya
-        <p>The iconographic representation of Goddess Laxmi is rich with symbolism and spiritual significance. She is typically depicted as a beautiful goddess with four arms, seated or standing on a lotus flower. Her golden complexion symbolizes prosperity and the ripeness of harvest. The four arms represent the four goals of human life according to Hindu philosophy:</p>
-        <ul>
-            <li>Dharma (righteousness)</li>
-            <li>Artha (wealth)</li>
-            <li>Kama (desires)</li>
-            <li>Moksha (liberation)</li>
-        </ul>
-
-        <p>In her hands, she often holds:</p>
-        <ul>
-            <li>Lotus flowers (representing spiritual enlightenment)</li>
-            <li>Gold coins (symbolizing material wealth)</li>
-            <li>Her hands in Abhaya Mudra (blessing) and Varada Mudra (giving)</li>
-        </ul>
-
-        <p>The lotus seat represents purity and transcendence, teaching that one should remain untouched by materialism while living in the material world. The elephants often shown flanking her represent royal power, fertility, and rain clouds that bring prosperity to the land.</p>
-
-        <h2>Eight Forms of Laxmi</h2>
-        <p>Hindu scriptures describe eight principal manifestations of Goddess Laxmi, known as the Ashta Laxmi:</p>
-        <ol>
-            <li>Adi Laxmi (The First Manifestation)</li>
-            <li>Dhanya Laxmi (Goddess of Agricultural Wealth)</li>
-            <li>Dhana Laxmi (Goddess of Monetary Wealth)</li>
-            <li>Gaja Laxmi (Goddess of Animal Wealth)</li>
-            <li>Santana Laxmi (Goddess of Progeny)</li>
-            <li>Veera Laxmi (Goddess of Courage)</li>
-            <li>Vijaya Laxmi (Goddess of Victory)</li>
-            <li>Vidya Laxmi (Goddess of Knowledge)</li>
-        </ol>
-
-        <h2>Worship and Festivals</h2>
-        <p>The worship of Goddess Laxmi is an integral part of Hindu religious practice. Diwali, the festival of lights, is the most important celebration dedicated to her. During this five-day festival, homes are cleaned and decorated with lights and rangoli (decorative patterns) to welcome the goddess. People perform Laxmi Puja (worship) with elaborate rituals, seeking her blessings for prosperity and well-being.</p>
-
-        <p>Other significant occasions for Laxmi worship include:</p>
-        <ul>
-            <li>Sharad Purnima</li>
-            <li>Friday evenings</li>
-            <li>Thai Pongal</li>
-            <li>Varalakshmi Vratam</li>
-        </ul>
-
-        <h2>Spiritual Significance</h2>
-        <p>Beyond material prosperity, Goddess Laxmi represents divine grace and the spiritual abundance that comes from righteous living. Her worship is not merely about seeking material wealth but understanding the deeper principles of dharma (righteousness) and karma (action). The goddess teaches that true prosperity comes from maintaining balance in life, practicing generosity, and cultivating spiritual wisdom.</p>
-
-        <p>The concept of Laxmi extends to:</p>
-        <ul>
-            <li>Spiritual wealth (inner peace and contentment)</li>
-            <li>Intellectual wealth (knowledge and wisdom)</li>
-            <li>Material wealth (resources and abundance)</li>
-            <li>Emotional wealth (love and relationships)</li>
-        </ul>
-
-        <h2>Mantras and Prayers</h2>
-        <p>Devotees chant various mantras and prayers to invoke the blessings of Goddess Laxmi. The most famous among these is the Laxmi Beej Mantra: "Om Hreem Shreem Laxmi Bhyo Namaha." Other significant prayers include the Sri Suktam from the Rigveda and the Kanakadhara Stotram composed by Adi Shankaracharya.</p>
-
-        <h2>Contemporary Relevance</h2>
-        <p>In today's materialistic world, the teachings of Goddess Laxmi remain highly relevant. She reminds us that prosperity should be earned through righteous means and used for the benefit of all. Her principles encourage:</p>
-        <ul>
-            <li>Ethical wealth creation</li>
-            <li>Generous sharing of resources</li>
-            <li>Balance between material and spiritual pursuits</li>
-            <li>Environmental consciousness</li>
-        </ul>
-
-        <h2>Conclusion</h2>
-        <p>Goddess Laxmi represents the divine feminine energy that creates, nurtures, and sustains all forms of abundance in the universe. Her worship and teachings continue to inspire millions worldwide, promoting a holistic approach to prosperity that encompasses material well-being, spiritual growth, and social harmony.</p>
-
-        <hr>
-
-        <h1 class="nepali">देवी लक्ष्मी: समृद्धि र प्रचुरताको दैवीय स्वरूप</h1>
-
-        <div class="nepali">
-            <h2>परिचय</h2>
-            <p>हिन्दू देवी-देवताहरूको विशाल समूहमा, देवी लक्ष्मी धन, समृद्धि, भाग्य र प्रचुरताको दैवीय स्वरूपको रूपमा सर्वोच्च महत्व राख्छिन्। उनी केवल भौतिक धनकी देवी मात्र होइनन्, बरु सबै प्रकारको समृद्धि - आध्यात्मिक, बौद्धिक र भौतिक समृद्धिको प्रतिनिधित्व गर्छिन्। भगवान विष्णुकी पत्नीको रूपमा चिनिने लक्ष्मीले ब्रह्माण्डमा धन र समृद्धिको कोस्मिक सन्तुलन कायम राख्ने महत्वपूर्ण भूमिका निर्वाह गर्छिन्।</p>
-
-            <h2>उत्पत्ति र पौराणिक कथा</h2>
-            <p>हिन्दू पौराणिक कथा अनुसार, देवी लक्ष्मीको उत्पत्ति देवता र असुरहरूले गरेको प्रसिद्ध समुद्र मन्थनको क्रममा भएको थियो। उनी क्षीर सागरबाट पूर्ण विकसित कमलमा विराजमान भई सौन्दर्य र कृपा विकिरण गर्दै उदय भइन्। यो दैवीय उत्पत्तिले उनलाई 'पद्मा' नाम दिलायो, जसको अर्थ कमल हो, जुन उनका धेरै नामहरू मध्ये एक बन्यो।</p>
-
-            <p>कोस्मिक मन्थनको कथाले राम्रो र खराबको बीचको अनन्त संघर्षको प्रतीक हो, जहाँ लक्ष्मीले धार्मिक कार्य र आध्यात्मिक खोजको अन्तिम पुरस्कारको प्रतिनिधित्व गर्छिन्। समुद्रबाट उनको उदयले सृष्टिको अनन्त सम्भावना र कोस्मिक चेतनामा निहित प्रचुरतालाई संकेत गर्छ।</p>
-
-            <h2>मूर्तिकला र प्रतीकात्मकता</h2>
-            <p>देवी लक्ष्मीको मूर्तिकला प्रतीकात्मकता र आध्यात्मिक महत्वले भरिपूर्ण छ। उनलाई सामान्यतया चार हात भएकी सुन्दर देवीको रूपमा कमल फूलमा बसेकी वा उभिएकी देखाइन्छ। उनको सुनौलो वर्णले समृद्धि र फसलको परिपक्वतालाई प्रतीक गर्छ। चार हातले हिन्दू दर्शन अनुसार मानव जीवनका चार लक्ष्यहरूको प्रतिनिधित्व गर्छन्:</p>
-            <ul>
-                <li>धर्म (धार्मिकता)</li>
-                <li>अर्थ (धन)</li>
-                <li>काम (इच्छाहरू)</li>
-                <li>मोक्ष (मुक्ति)</li>
-            </ul>
-
-            <h2>लक्ष्मीका आठ रूपहरू</h2>
-            <p>हिन्दू धर्मग्रन्थहरूले देवी लक्ष्मीका आठ प्रमुख स्वरूपहरूको वर्णन गरेका छन्, जसलाई अष्टलक्ष्मी भनिन्छ:</p>
-            <ol>
-                <li>आदि लक्ष्मी (पहिलो स्वरूप)</li>
-                <li>धान्य लक्ष्मी (कृषि धनकी देवी)</li>
-                <li>धन लक्ष्मी (मौद्रिक धनकी देवी)</li>
-                <li>गज लक्ष्मी (पशु धनकी देवी)</li>
-                <li>सन्तान लक्ष्मी (सन्तानकी देवी)</li>
-                <li>वीर लक्ष्मी (साहसकी देवी)</li>
-                <li>विजय लक्ष्मी (विजयकी देवी)</li>
-                <li>विद्या लक्ष्मी (ज्ञानकी देवी)</li>
-            </ol>
-
-            <h2>पूजा र चाडपर्वहरू</h2>
-            <p>देवी लक्ष्मीको पूजा हिन्दू धार्मिक अभ्यासको अभिन्न अंग हो। दीपावली, उज्यालोको चाड, उनको सम्मानमा मनाइने सबैभन्दा महत्वपूर्ण उत्सव हो। यस पाँच दिने चाडमा घरहरू सफा गरिन्छ र देवीलाई स्वागत गर्न बत्तीहरू र रङ्गोलीले सजाइन्छ। मानिसहरूले समृद्धि र कल्याणको लागि उनको आशीर्वाद खोज्दै विस्तृत विधिहरूसँग लक्ष्मी पूजा गर्छन्।</p>
-
-            <h2>आध्यात्मिक महत्व</h2>
-            <p>भौतिक समृद्धि बाहेक, देवी लक्ष्मीले दैवीय कृपा र धार्मिक जीवनबाट प्राप्त हुने आध्यात्मिक प्रचुरताको प्रतिनिधित्व गर्छिन्। उनको पूजा केवल भौतिक धन खोज्ने विषय मात्र होइन, तर धर्म (धार्मिकता) र कर्म (कार्य) का गहन सिद्धान्तहरू बुझ्ने विषय पनि हो। देवीले सिकाउनुहुन्छ कि साँचो समृद्धि जीवनमा सन्तुलन कायम राख्न, उदारता अभ्यास गर्न र आध्यात्मिक ज्ञान विकास गर्नबाट आउँछ।</p>
-
-            <p>लक्ष्मीको अवधारणा निम्न कुराहरूमा विस्तारित छ:</p>
-            <ul>
-                <li>आध्यात्मिक धन (आन्तरिक शान्ति र सन्तुष्टि)</li>
-                <li>बौद्धिक धन (ज्ञान र विवेक)</li>
-                <li>भौतिक धन (स्रोत र प्रचुरता)</li>
-                <li>भावनात्मक धन (प्रेम र सम्बन्धहरू)</li>
-            </ul>
-
-            <h2>मन्त्र र प्रार्थनाहरू</h2>
-            <p>भक्तहरूले देवी लक्ष्मीको आशीर्वाद प्राप्त गर्न विभिन्न मन्त्र र प्रार्थनाहरू जप्छन्। यी मध्ये सबैभन्दा प्रसिद्ध लक्ष्मी बीज मन्त्र हो: "ॐ ह्रीं श्रीं लक्ष्मी भ्यो नमः।" अन्य महत्वपूर्ण प्रार्थनाहरूमा ऋग्वेदको श्री सूक्त र आदि शंकराचार्यद्वारा रचित कनकधारा स्तोत्रम् समावेश छन्।</p>
-
-            <h2>समकालीन सान्दर्भिकता</h2>
-            <p>आजको भौतिकवादी संसारमा देवी लक्ष्मीका शिक्षाहरू अत्यन्त सान्दर्भिक छन्। उनले हामीलाई याद दिलाउँछिन् कि समृद्धि धार्मिक माध्यमबाट कमाउनुपर्छ र सबैको हितको लागि प्रयोग गर्नुपर्छ। उनका सिद्धान्तहरूले प्रोत्साहित गर्छन्:</p>
-            <ul>
-                <li>नैतिक धन सृजना</li>
-                <li>स्रोतहरूको उदार बाँडफाँड</li>
-                <li>भौतिक र आध्यात्मिक खोजबीच सन्तुलन</li>
-                <li>वातावरणीय चेतना</li>
-            </ul>
-
-            <h2>निष्कर्ष</h2>
-            <p>देवी लक्ष्मी ब्रह्माण्डमा सबै प्रकारको प्रचुरता सृजना गर्ने, पोषण गर्ने र कायम राख्ने दैवीय नारी शक्तिको प्रतिनिधित्व गर्छिन्। उनको पूजा र शिक्षाहरूले विश्वभरका लाखौं मानिसहरूलाई प्रेरित गर्न जारी छ, जसले भौतिक कल्याण, आध्यात्मिक विकास र सामाजिक सद्भावलाई समावेश गर्ने समृद्धिप्रतिको समग्र दृष्टिकोणलाई बढावा दिन्छ।</p>
-        </div>
-    </div>
+    Nepalis amountaines country.i love mountain and himalaya</p>
 </body>
 </html>
