--- a/HTML/content/dharma_studies/laxmi.html
+++ b/HTML/content/dharma_studies/laxmi.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>My First Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f5f5f5;
-        }
+Nepal mountain
+Laxmi panta
+Aayush
     </style>
 </head>
 <body>
