--- a/HTML/content/dharma_studies/laxmi.html
+++ b/HTML/content/dharma_studies/laxmi.html
@@ -1,9 +1,10 @@
-Nepal mountain
-Laxmi panta
-Aayush
-    </style>
+<html>
+    <head>
 </head>
 <body>
+    <p>Nepal mountain
+Laxmi panta
+Aayush</p>
     <h1>Hello World!</h1>
     <p>     dlkfjdslfjeo
 fkldskfldskfoe
