--- a/laxmi.html
+++ b/laxmi.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  Hello Nepal
+  < laxmi is a god</h
   <title>Discover Nepal</title>
   <link rel="stylesheet" href="styles.css">
 </head>
