--- a/laxmi.html
+++ b/laxmi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+<aayush></aayush>
   < laxmi is a god</h
   <title>Discover Nepal</title>
   <link rel="stylesheet" href="styles.css">
