--- a/laxmi.html
+++ b/laxmi.html
@@ -6,7 +6,7 @@
   <title>Discover Nepal</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<hight of mount everest is8848
 <!DOCTYPE html>
 <html lang="en">
 <head>
