--- a/HTML/content/games/DandD_character_sheet.html
+++ b/HTML/content/games/DandD_character_sheet.html
@@ -132,11 +132,11 @@
             <label class="label">
                 Race / जाति:
                 <select id="race">
-                    <option value="elf">Elf / एल्फ</option>
-                    <option value="dwarf">Dwarf / पुड्को</option>
+                    <option value="elf">Yeti / यती </option>
+                    <option value="dwarf">Kinnaras / किन्नारस</option>
                     <option value="human">Human / मानव</option>
-                    <option value="faerie">Faerie / परी</option>
-                    <option value="halfling">Halfling / हाफलिङ</option>
+                    <option value="faerie">Bon / बोन</option>
+                    <option value="halfling">Dakinis / डाकिनिस</option>
                 </select>
             </label>
         </div>
@@ -153,17 +153,17 @@
             <label class="label">
                 Class / वर्ग:
                 <select id="class">
-                    <option value="barbarian">Barbarian / बर्बेरियन</option>
-                    <option value="bard">Bard / बार्ड</option>
-                    <option value="cleric">Cleric / क्लेरिक</option>
-                    <option value="druid">Druid / द्रुइड</option>
+                    <option value="gurkhali">Gurkhali / गुरुखली</option>
+                    <option value="gandharva">Gandharva - Bard / गान्ध्रवा</option>
+                    <option value="jhakri">Jhakri / झाक्री</option>
+                    <option value="bonpo">Bon - Po / बोन-पो</option>
                     <option value="fighter">Fighter / फाइटर</option>
                     <option value="monk">Monk / भिक्षु</option>
                     <option value="paladin">Paladin / प्यालाडिन</option>
                     <option value="ranger">Ranger / रेन्जर</option>
                     <option value="rogue">Rogue / रोग</option>
-                    <option value="sorcerer">Sorcerer / जादूगर</option>
-                    <option value="warlock">Warlock / वारलक</option>
+                    <option value="dhami">Dhami - Mediums possessed by deities, gaining their powers temporarily / धामी</option>
+                    <option value="jakhris">Jakhris - shamans who use ritual objects, herbs, and spirit communication / जख्रिस</option>
                     <option value="wizard">Wizard / विज़र्ड</option>
                 </select>
             </label>
