--- a/HTML/content/games/DandD_character_sheet.html
+++ b/HTML/content/games/DandD_character_sheet.html
@@ -118,7 +118,7 @@
     </style>
 </head>
 <body>
-    <h1>D&D Character Sheet / डी एंड डी क्यारेक्टर सीट</h1>
+    <h1>Nepali D&D Character Sheet / डी एंड डी क्यारेक्टर सीट</h1>
     
     <div class="section">
         <h2>Basic Information / आधारभूत जानकारी</h2>
