--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Algebra | बीजगणित</h1>
+            <h1>propit and loss| बीजगणित</h1>
         
         <div class="language">
             <h2>English</h2>
