--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -28,7 +28,11 @@
         </div>
         
         <div class="language">
+            <h1>test</h1>
             <h2>नेपाली (Nepali)</h2>
+            <h3>math</h3>
+            <h4>economics</h4>
+            <h5>read</h5>
             <p>बीजगणित गणितको एउटा शाखा हो जसमा प्रतीकहरू (variables) र तिनलाई कसरी मिलाउन सकिन्छ भन्ने नियमहरूको अध्ययन गरिन्छ। यसले समीकरणहरू समाधान गर्न र चरहरू (variables) बीचको सम्बन्ध बुझ्न मद्दत गर्छ।</p>
             <h3>आधारभूत अवधारणाहरू:</h3>
             <ul>
