--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -17,6 +17,8 @@
         
         <div class="language">
             <h2>English</h2>
+            <p>bbbbbbb</p>
+           <p>move</p>
             <p>Algebra is a branch of mathematics dealing with symbols and the rules for manipulating those symbols. It helps in solving equations and understanding relationships between variables.</p>
             <h3>Basic Concepts:</h3>
             <ul>
