--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -7,43 +7,13 @@
     <style>
         body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; }
         .container { max-width: 800px; margin: auto; }
-        h1, h2 { color: #2c3e50; }
+        h1, h2 { color: "blue" }
         .language { margin-bottom: 20px; }
     </style>
 </head>
 <body>
-    <div class="container">
-            <h1>propit and loss| बीजगणित</h1>
-        
-        <div class="language">
-            <h2>English</h2>
-            <p>bbbbbbb</p>
-           <p>move</p>
-            <p>Algebra is a branch of mathematics dealing with symbols and the rules for manipulating those symbols. It helps in solving equations and understanding relationships between variables.</p>
-            <h3>Basic Concepts:</h3>
-            <ul>
-                <li>Variables and Constants</li>
-                <li>Equations and Expressions</li>
-                <li>Linear and Quadratic Equations</li>
-                <li>Functions and Graphs</li>
-            </ul>
-        </div>
-        
-        <div class="language">
-            <h1>test</h1>
-            <h2>नेपाली (Nepali)</h2>
-            <h3>math</h3>
-            <h4>economics</h4>
-            <h5>read</h5>
-            <p>बीजगणित गणितको एउटा शाखा हो जसमा प्रतीकहरू (variables) र तिनलाई कसरी मिलाउन सकिन्छ भन्ने नियमहरूको अध्ययन गरिन्छ। यसले समीकरणहरू समाधान गर्न र चरहरू (variables) बीचको सम्बन्ध बुझ्न मद्दत गर्छ।</p>
-            <h3>आधारभूत अवधारणाहरू:</h3>
-            <ul>
-                <li>चर (Variables) र स्थिरांक (Constants)</li>
-                <li>समीकरण (Equations) र अभिव्यक्तिहरू (Expressions)</li>
-                <li>रेखीय (Linear) र द्विघात (Quadratic) समीकरण</li>
-                <li>प्रयोगहरू (Functions) र ग्राफहरू</li>
-            </ul>
-        </div>
-    </div>
+ <h1>What color am I?</h1>
+    <h2>green</h2>
+    <h3>sdfsdfdsf</h3>
 </body>
 </html>
