--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algebra | बीजगणित</title>
     <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; }
-        .container { max-width: 800px; margin: auto; }
-        h1, h2 { color: "blue" }
-        .language { margin-bottom: 20px; }
+
+        h1 { color: blue }
+
     </style>
 </head>
 <body>
