--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -9,6 +9,7 @@
         h1 { color: blue }
         h2 { color: green }
         h3 { color: red }
+        h4 { color: purple }
 
     </style>
 </head>
@@ -16,5 +17,6 @@
  <h1>What color am I?</h1>
     <h2>green</h2>
     <h3>sdfsdfdsf</h3>
+    <h4>dsfjnvdfjhv</</h4>
 </body>
 </html>
