--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -9,7 +9,7 @@
         h1 { color: blue }
         h2 { color: green }
         h3 { color: red }
-        h4 { color: purple }
+        h4 { color: yellow }
 
     </style>
 </head>
