--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -18,5 +18,10 @@
     <h2>green</h2>
     <h3>sdfsdfdsf</h3>
     <h4>dsfjnvdfjhegdfgv</</h4>
+<ul>
+  <li>Apple</li>
+  <li>Banana</li>
+  <li>Orange</li>
+</ul>
 </body>
 </html>
