--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -10,14 +10,18 @@
         h2 { color: green }
         h3 { color: red }
         h4 { color: yellow }
-
-    </style>
 </head>
 <body>
+
+<ul>
+  <li>Apple</li>
+  <li>Banana</li>
+  <li>Orange</li>
+</ul>            
  <h1>What color am I?</h1>
     <h2>green</h2>
     <h3>sdfsdfdsf</h3>
-    <h4>dsfjnvdfjhegdfgv</</h4>
+    <h4>dsfjnvdfjhegdfgv</h4>
 <ul>
   <li>Apple</li>
   <li>Banana</li>
