--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -11,6 +11,7 @@
         h3 { color: red }
         h4 { color: yellow }
         p { color: black }
+    </style>
 </head>
 <body>
 <p>Holi is a vibrant and joyful festival celebrated primarily in India and Nepal, but it has gained popularity worldwide. Known as the Festival of Colors, it marks the arrival of spring and the victory of good over evil. Holi typically falls in March, on the full moon day of the Hindu month of Phalguna.
