--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -10,7 +10,7 @@
         h3 { color: red; }
         h4 { color: orange; }
         p { color: black; }
-        ul li { color: #555fa7; }
+        ul li { color:#34b973; }
     </style>
     <script>
         function changeListColors() {
