--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -9,7 +9,7 @@
         h2 { color: green; }
         h3 { color: red; }
         h4 { color: orange; }
-        p { color: black; }
+        p { color: #34b973; }
         ul li { color:#34b973; }
     </style>
     <script>
