--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -11,7 +11,7 @@
         h4 { color: orange; }
         p { color: #34b973; }
         ul li { color:#34b973; }
-       body { background-color: blue; }
+       body { background-color: black to red; }
     </style>
     <script>
         function changeListColors() {
