--- a/HTML/content/music/build_instruments.html
+++ b/HTML/content/music/build_instruments.html
@@ -35,7 +35,7 @@
             font-family: 'Noto Sans Devanagari', Arial, sans-serif;
        <ul>
            <li>mango</li>
-           <li>lemon</</li>
+           <li>lemonj</</li>
                         
         <li>orange</li>
        </ul>
