--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -28,7 +28,7 @@
     <ul>
         <li>Apple</li>
         <li>Banana</li>
-        <li>Orange</li>
+        <li>Orangeh</li>
     </ul>
     
     <h1>What color am I?</h1>
