--- a/HTML/content/math/santosh_algebra.html
+++ b/HTML/content/math/santosh_algebra.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
+<!-- doctype html tells the page what kind of file this is -->
 <html lang="ne">
+<!-- html stands for hyper text markup language-->    
 <head>
+<!-- head tag is for style and other information and scripts -->
     <meta charset="UTF-8">
+<!-- UTF-8 allows devangiri script -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algebra | बीजगणित</title>
+<!-- title tag adds text to the tab in the bvrowser -->
     <style>
         h1 { color: blue; }
         h2 { color: green; }
