--- a/HTML/content/music/build_instruments.html
+++ b/HTML/content/music/build_instruments.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel Management</title>
+    <title>Hotel Guest Tracker</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,6 +28,17 @@
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
         .footer {
             text-align: center;
             padding: 10px;
@@ -40,27 +51,67 @@
     </style>
 </head>
 <body>
-    <div class="header">Hotel Management System</div>
+    <div class="header">Hotel Guest Tracker</div>
     <div class="container">
         <div class="section">
-            <h2>About Us</h2>
-            <p>Welcome to our hotel management system. We offer seamless management solutions for hotels, ensuring guest satisfaction and operational efficiency.</p>
+            <h2>Add Guest</h2>
+            <form id="guestForm">
+                <input type="text" id="name" placeholder="Guest Name" required>
+                <input type="text" id="room" placeholder="Room Number" required>
+                <input type="date" id="checkin" required>
+                <input type="date" id="checkout" required>
+                <button type="submit">Add Guest</button>
+            </form>
         </div>
         <div class="section">
-            <h2>Services</h2>
-            <ul>
-                <li>Online Booking</li>
-                <li>Room Management</li>
-                <li>Customer Support</li>
-                <li>Billing & Payment Processing</li>
-            </ul>
-        </div>
-        <div class="section">
-            <h2>Contact Us</h2>
-            <p>Email: support@hotelmanagement.com</p>
-            <p>Phone: +123 456 7890</p>
+            <h2>Guest List</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Room</th>
+                        <th>Check-in</th>
+                        <th>Check-out</th>
+                    </tr>
+                </thead>
+                <tbody id="guestList"></tbody>
+            </table>
+            <button onclick="saveGuests()">Save</button>
+            <button onclick="loadGuests()">Load</button>
         </div>
     </div>
-    <div class="footer">&copy; 2025 Hotel Management System</div>
+    <div class="footer">&copy; 2025 Hotel Guest Tracker</div>
+    
+    <script>
+        let guests = [];
+        document.getElementById('guestForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            let name = document.getElementById('name').value;
+            let room = document.getElementById('room').value;
+            let checkin = document.getElementById('checkin').value;
+            let checkout = document.getElementById('checkout').value;
+            guests.push({ name, room, checkin, checkout });
+            updateTable();
+            this.reset();
+        });
+        function updateTable() {
+            let tbody = document.getElementById('guestList');
+            tbody.innerHTML = '';
+            guests.forEach(guest => {
+                let row = `<tr><td>${guest.name}</td><td>${guest.room}</td><td>${guest.checkin}</td><td>${guest.checkout}</td></tr>`;
+                tbody.innerHTML += row;
+            });
+        }
+        function saveGuests() {
+            localStorage.setItem('guests', JSON.stringify(guests));
+        }
+        function loadGuests() {
+            let data = localStorage.getItem('guests');
+            if (data) {
+                guests = JSON.parse(data);
+                updateTable();
+            }
+        }
+    </script>
 </body>
 </html>
